# Task_Queue_POC

./: .gitignore  README.md
Client/: .env.example  README.md  package-lock.json  package.json
Client/src/: App.tsx  useApp.ts
Client/src/components/: Test.tsx
Client/src/hooks/: useInterval.ts
Client/src/interfaces/: index.tsx
server/: .dockerfile  .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
server/src/: main.py
server/src/schema/: Task.py
server/src/utils/: env_config.py
server/src/worker/: Celery.py
